// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RatingStars /> renders as form element 1`] = `
<div
  className="css-13azwyo "
>
  <div
    className="css-4s85e9"
  >
    <div
      className="css-kdb68h css-q4owmg"
      key="1"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="2"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="3"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="4"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="5"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
  </div>
  <div
    className="css-16y9zin"
  >
    <div
      className="css-kdb68h css-q4owmg"
      key="6"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="7"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="8"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
  </div>
</div>
`;

exports[`<RatingStars /> renders as non-form element 1`] = `
<div
  className="css-13azwyo "
>
  <div
    className="css-4s85e9"
  >
    <div
      className="css-kdb68h css-q4owmg"
      key="1"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="2"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="3"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="4"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="5"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
  </div>
  <div
    className="css-16y9zin"
  >
    <div
      className="css-kdb68h css-q4owmg"
      key="6"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="7"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="8"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
  </div>
</div>
`;

exports[`<RatingStars /> renders with value of 0 1`] = `
<div
  className="css-13azwyo "
>
  <div
    className="css-4s85e9"
  >
    <div
      className="css-kdb68h css-q4owmg"
      key="1"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="2"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="3"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="4"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="5"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
  </div>
  <div
    className="css-16y9zin"
  />
</div>
`;

exports[`<RatingStars /> renders with value of 50 1`] = `
<div
  className="css-13azwyo "
>
  <div
    className="css-4s85e9"
  >
    <div
      className="css-kdb68h css-q4owmg"
      key="1"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="2"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="3"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="4"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="5"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
  </div>
  <div
    className="css-16y9zin"
  >
    <div
      className="css-kdb68h css-q4owmg"
      key="6"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="7"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="2"
    >
      <StarHalfIcon
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
  </div>
</div>
`;

exports[`<RatingStars /> renders with value of 100 1`] = `
<div
  className="css-13azwyo "
>
  <div
    className="css-4s85e9"
  >
    <div
      className="css-kdb68h css-q4owmg"
      key="1"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="2"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="3"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="4"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="5"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
  </div>
  <div
    className="css-16y9zin"
  >
    <div
      className="css-kdb68h css-q4owmg"
      key="6"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="7"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="8"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="9"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="10"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
  </div>
</div>
`;

exports[`<RatingStars /> sets a value on filled star click 1`] = `
<RatingStars
  className=""
  display="small"
  isFormElement={true}
  onSelection={[Function]}
  value={100}
>
  <div
    className="css-13azwyo "
  >
    <div
      className="css-4s85e9"
    >
      <div
        className="css-kdb68h css-q4owmg"
        key="1"
        onClick={[Function]}
        role="button"
      >
        <Star
          className=""
          color={null}
          size="1em"
          viewBox="0 0 24 24"
        >
          <Icon
            className=""
            color={null}
            content="<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>"
            size="1em"
            viewBox="0 0 24 24"
          >
            <svg
              className="css-yys9hb "
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>",
                }
              }
              style={
                Object {
                  "fill": null,
                  "fontSize": "1em",
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            />
          </Icon>
        </Star>
      </div>
      <div
        className="css-kdb68h css-q4owmg"
        key="2"
        onClick={[Function]}
        role="button"
      >
        <Star
          className=""
          color={null}
          size="1em"
          viewBox="0 0 24 24"
        >
          <Icon
            className=""
            color={null}
            content="<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>"
            size="1em"
            viewBox="0 0 24 24"
          >
            <svg
              className="css-yys9hb "
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>",
                }
              }
              style={
                Object {
                  "fill": null,
                  "fontSize": "1em",
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            />
          </Icon>
        </Star>
      </div>
      <div
        className="css-kdb68h css-q4owmg"
        key="3"
        onClick={[Function]}
        role="button"
      >
        <Star
          className=""
          color={null}
          size="1em"
          viewBox="0 0 24 24"
        >
          <Icon
            className=""
            color={null}
            content="<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>"
            size="1em"
            viewBox="0 0 24 24"
          >
            <svg
              className="css-yys9hb "
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>",
                }
              }
              style={
                Object {
                  "fill": null,
                  "fontSize": "1em",
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            />
          </Icon>
        </Star>
      </div>
      <div
        className="css-kdb68h css-q4owmg"
        key="4"
        onClick={[Function]}
        role="button"
      >
        <Star
          className=""
          color={null}
          size="1em"
          viewBox="0 0 24 24"
        >
          <Icon
            className=""
            color={null}
            content="<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>"
            size="1em"
            viewBox="0 0 24 24"
          >
            <svg
              className="css-yys9hb "
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>",
                }
              }
              style={
                Object {
                  "fill": null,
                  "fontSize": "1em",
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            />
          </Icon>
        </Star>
      </div>
      <div
        className="css-kdb68h css-q4owmg"
        key="5"
        onClick={[Function]}
        role="button"
      >
        <Star
          className=""
          color={null}
          size="1em"
          viewBox="0 0 24 24"
        >
          <Icon
            className=""
            color={null}
            content="<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>"
            size="1em"
            viewBox="0 0 24 24"
          >
            <svg
              className="css-yys9hb "
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>",
                }
              }
              style={
                Object {
                  "fill": null,
                  "fontSize": "1em",
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            />
          </Icon>
        </Star>
      </div>
    </div>
    <div
      className="css-16y9zin"
    >
      <div
        className="css-kdb68h css-q4owmg"
        key="6"
        onClick={[Function]}
        role="button"
      >
        <Star
          className=""
          color={null}
          size="1em"
          viewBox="0 0 24 24"
        >
          <Icon
            className=""
            color={null}
            content="<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>"
            size="1em"
            viewBox="0 0 24 24"
          >
            <svg
              className="css-yys9hb "
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>",
                }
              }
              style={
                Object {
                  "fill": null,
                  "fontSize": "1em",
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            />
          </Icon>
        </Star>
      </div>
      <div
        className="css-kdb68h css-q4owmg"
        key="7"
        onClick={[Function]}
        role="button"
      >
        <Star
          className=""
          color={null}
          size="1em"
          viewBox="0 0 24 24"
        >
          <Icon
            className=""
            color={null}
            content="<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>"
            size="1em"
            viewBox="0 0 24 24"
          >
            <svg
              className="css-yys9hb "
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>",
                }
              }
              style={
                Object {
                  "fill": null,
                  "fontSize": "1em",
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            />
          </Icon>
        </Star>
      </div>
      <div
        className="css-kdb68h css-q4owmg"
        key="8"
        onClick={[Function]}
        role="button"
      >
        <Star
          className=""
          color={null}
          size="1em"
          viewBox="0 0 24 24"
        >
          <Icon
            className=""
            color={null}
            content="<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>"
            size="1em"
            viewBox="0 0 24 24"
          >
            <svg
              className="css-yys9hb "
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>",
                }
              }
              style={
                Object {
                  "fill": null,
                  "fontSize": "1em",
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            />
          </Icon>
        </Star>
      </div>
      <div
        className="css-kdb68h css-q4owmg"
        key="9"
        onClick={[Function]}
        role="button"
      >
        <Star
          className=""
          color={null}
          size="1em"
          viewBox="0 0 24 24"
        >
          <Icon
            className=""
            color={null}
            content="<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>"
            size="1em"
            viewBox="0 0 24 24"
          >
            <svg
              className="css-yys9hb "
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>",
                }
              }
              style={
                Object {
                  "fill": null,
                  "fontSize": "1em",
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            />
          </Icon>
        </Star>
      </div>
      <div
        className="css-kdb68h css-q4owmg"
        key="10"
        onClick={[Function]}
        role="button"
      >
        <Star
          className=""
          color={null}
          size="1em"
          viewBox="0 0 24 24"
        >
          <Icon
            className=""
            color={null}
            content="<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>"
            size="1em"
            viewBox="0 0 24 24"
          >
            <svg
              className="css-yys9hb "
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<path d=\\"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\\"/>",
                }
              }
              style={
                Object {
                  "fill": null,
                  "fontSize": "1em",
                }
              }
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            />
          </Icon>
        </Star>
      </div>
    </div>
  </div>
</RatingStars>
`;

exports[`<RatingStars /> sets value on empty star click 1`] = `
<div
  className="css-13azwyo "
>
  <div
    className="css-4s85e9"
  >
    <div
      className="css-kdb68h css-q4owmg"
      key="1"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="2"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="3"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="4"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="css-kdb68h css-q4owmg"
      key="5"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
  </div>
  <div
    className="css-16y9zin"
  />
</div>
`;
